modeles_simple_k8s/blue-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: 
spec: 
  replicas: 
  template: 
    metadata: 
      labels: 
        name: 
        version: 
    spec: 
      containers: 
        - name: 
          image: 
          ports: 
            - name: 
              containerPort:
