modeles_simple_k8s/nginx-test.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: 
spec: 
  replicas: 
  selector: 
    matchLabels: 
      service: 
  strategy: 
    type: 
    rollingUpdate: 
      maxSurge: 
      maxUnavailable: 
  minReadySeconds: 
  template: 
    metadata: 
      labels: 
        service: 
    spec: 
      containers: 
      - name: 
        image: 
        imagePullPolicy: 
        ports: 
        - containerPort:
