modeles_simple_k8s/pod-taint-node.yaml
apiVersion: v1
kind: Pod
metadata: 
 name: 
spec: 
 affinity: 
   nodeAffinity: 
     requiredDuringSchedulingIgnoredDuringExecution: 
       nodeSelectorTerms: 
       - matchExpressions: 
         - key: 
           operator: 
           values: 
           - dev
: 
 containers: 
 - name: 
   image:
