modeles_simple_k8s/pod-tolerations-node.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: 
  labels: 
spec: 
  containers: 
  - name: 
    image: 
    imagePullPolicy: 
  tolerations: 
  - key: 
    operator: 
    value: 
    effect:
