modeles_simple_k8s/pod-with-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: 
spec: 
  affinity: 
    nodeAffinity: 
      requiredDuringSchedulingIgnoredDuringExecution: 
        nodeSelectorTerms: 
        - matchExpressions: 
          - key: 
            operator: 
            values: 
            - worker-1
: 
      preferredDuringSchedulingIgnoredDuringExecution: 
      - weight: 
        preference: 
          matchExpressions: 
          - key: 
            operator: 
            values: 
            - worker-3
: 
  containers: 
  - name: 
    image:
