modeles_simple_k8s/pod-www2.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: 
  labels: 
    name: 
spec: 
  containers: 
  - name: 
    image: 
    ports: 
      - containerPort: 
        name: 
    volumeMounts: 
      - name: 
        mountPath: 
  volumes: 
    - name: 
      persistentVolumeClaim: 
        claimName:
