modeles_simple_k8s/pods01.yaml
apiVersion: v1      # apiVersion: this is the version of the API used by the cluster. 
                    # With new versions of Kubernetes being released, new functionality is introduced and, hence, new API versions may be defined. 
: 
                    # For the pod object, we use API version v1.
: 

: 
kind: Pod           
                    
: 
metadata: 
  name: 
spec: 
                    # It is the cluster’s responsibility to update the status of the object to always match the desired configuration. 
: 
                    # In our example, the spec instructs that this object (the pod) should have one container with some attributes.
: 
  containers: 
  - name: 
    image: 
    ports: 
    - containerPort: 
    
: 
    
: 
    
: 

: 

: 

: 

:
