modeles_simple_k8s/pods02.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: 
spec: 
  containers: 
  - name: 
    image: 
    ports: 
    - containerPort: 
  - name: 
    image:
