modeles_simple_k8s/pods03.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: 
spec: 
  volumes: 
  - name: 
    emptyDir: 
  containers: 
  - name: 
    image: 
    volumeMounts: 
    - name: 
      mountPath: 
  - name: 
    image: 
    volumeMounts: 
    - name: 
      mountPath: 
    command: 
    args: 
      - while true; do
: 
          date >> /html/index.html;
: 
          sleep 1;
: 
        done
:
