modeles_simple_k8s/banana.yaml
kind: Pod
apiVersion: v1
metadata: 
  name: 
  labels: 
    app: 
spec: 
  containers: 
    - name: 
      image: 
      args: 
        - "-text=banana"
: 

: 
---
: 

: 
kind: Service
apiVersion: v1
metadata: 
  name: 
spec: 
  selector: 
    app: 
  ports: 
    - port:
