modeles_simple_k8s/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: 
  labels: 
    run: 
spec: 
  ports: 
  - port: 
    protocol: 
  selector: 
    run:
