modeles_simple_k8s/portainer.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: 
---
: 
apiVersion: v1
kind: Service
metadata: 
  name: 
  namespace: 
spec: 
  type: 
  selector: 
    app: 
  ports: 
    - name: 
      protocol: 
      port: 
      targetPort: 
      nodePort: 
---
: 
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: 
  namespace: 
spec: 
  selector: 
    matchLabels: 
      app: 
  template: 
    metadata: 
      labels: 
        app: 
    spec: 
      serviceAccountName: 
      containers: 
      - name: 
        image: 
        imagePullPolicy: 
        ports: 
        - containerPort: 
          protocol:
