modeles_simple_k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: 
  labels: 
    name: 
spec: 
  ports: 
    - name: 
      port: 
      targetPort: 
  selector: 
    name: 
    version: 
  type:
