modeles_simple_k8s/web_stateful.yaml
apiVersion: v1
kind: Service
metadata: 
  name: 
  labels: 
    app: 
spec: 
  ports: 
  - port: 
    name: 
  clusterIP: 
  selector: 
    app: 
---
: 
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: 
spec: 
  serviceName: 
  replicas: 
  selector: 
    matchLabels: 
      app: 
  template: 
    metadata: 
      labels: 
        app: 
    spec: 
      containers: 
      - name: 
        image: 
        ports: 
        - containerPort: 
          name: 
        volumeMounts: 
        - name: 
          mountPath: 
  volumeClaimTemplates: 
  - metadata: 
      name: 
    spec: 
      accessModes: 
      resources: 
        requests: 
          storage:
