modeles_simple_k8s/web_stateful_service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: 
  labels: 
	app: 
spec: 
  ports: 
  - port: 
	name: 
  clusterIP: 
  selector: 
	app:
