modeles_simple_k8s/ingress.yaml
# apiVersion: extensions/v1beta1
apiVersion:networking.k8s.io/v1
kind: Ingress
metadata: 
  name: 
  annotations: 
    ingress.kubernetes.io/rewrite-target: 
spec: 
  rules: 
  - http: 
      paths: 
        - path: 
          backend: 
            service:
              name: 
              port: 
        - path: 
          backend: 
              name: 
              port:
