modeles_simple_k8s/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: 
  namespace: 
spec: 
  podSelector: 
  ingress: 
  - {}
: 
  policyTypes: 
  - Egress:
