modeles_simple_k8s/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: 
  namespace: 
spec: 
  podSelector: 
    matchLabels: 
  policyTypes: 
  - Egress:
