modeles_simple_k8s/default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  namespace: 
  name: 
spec: 
  podSelector: 
  policyTypes: 
  - Ingress:
